# Misson-Control-Studio

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md
.github/workflows/: ci.yml
artifacts/example_reports/: README.md  debrief_sample.md
artifacts/screens/: README.md
assets/rulepacks/: aggressive_monitoring.json  balanced_ops.json
assets/scenarios/: border_relay.json  convoy_guard.json  harbor_patrol.json  urban_response.json
assets/session_templates/: live_supervision.json  mission_review.json
assets/styles/: dark_ops.qss
assets/workspaces/: default_workspace.json  review_workspace.json
configs/: app_defaults.json  export_profiles.json
docs/: architecture.md  operator_walkthrough.md  product_requirements.md  roadmap.md  scenario_schema.md  screenshots.md
docs/adr/: 001-layered-ui-architecture.md  002-session-persistence.md  003-debrief-first.md
docs/mockups/: workstation_layout.txt
scripts/: make_demo_artifacts.py
src/: main.cpp
src/app/: ApplicationController.cpp  ApplicationController.h  WorkspaceState.cpp  WorkspaceState.h
src/domain/: Alert.cpp  Alert.h  IncidentBookmark.cpp  IncidentBookmark.h  Mission.cpp  Mission.h  OperatorNote.cpp  OperatorNote.h  OverlayProfile.cpp  OverlayProfile.h  PlatformHealth.cpp  PlatformHealth.h  Route.cpp  Route.h  Scenario.cpp  Scenario.h  SessionSummary.cpp  SessionSummary.h  TrackState.cpp  TrackState.h  ValidationIssue.cpp  ValidationIssue.h  Zone.cpp  Zone.h
src/services/: AlertRuleEngine.cpp  AlertRuleEngine.h  BookmarkRepository.cpp  BookmarkRepository.h  EventJournal.cpp  EventJournal.h  MissionSessionRepository.cpp  MissionSessionRepository.h  RecentSessionStore.cpp  RecentSessionStore.h  ReportExporter.cpp  ReportExporter.h  RulePackRepository.cpp  RulePackRepository.h  ScenarioRepository.cpp  ScenarioRepository.h  ScenarioValidator.cpp  ScenarioValidator.h  WorkspaceRepository.cpp  WorkspaceRepository.h
src/simulation/: SimulationEngine.cpp  SimulationEngine.h  ThreatModel.cpp  ThreatModel.h  TimelineScheduler.cpp  TimelineScheduler.h
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/dialogs/: AlertRulesDialog.cpp  AlertRulesDialog.h  ExportDialog.cpp  ExportDialog.h  ScenarioEditorDialog.cpp  ScenarioEditorDialog.h  SessionManagerDialog.cpp  SessionManagerDialog.h  SettingsDialog.cpp  SettingsDialog.h  WorkspaceLayoutDialog.cpp  WorkspaceLayoutDialog.h
src/ui/models/: BookmarkTableModel.cpp  BookmarkTableModel.h  TrackTableModel.cpp  TrackTableModel.h
src/ui/widgets/: AlertsWidget.cpp  AlertsWidget.h  BookmarkWidget.cpp  BookmarkWidget.h  EventLogWidget.cpp  EventLogWidget.h  HealthPanelWidget.cpp  HealthPanelWidget.h  InspectorWidget.cpp  InspectorWidget.h  LayerControlWidget.cpp  LayerControlWidget.h  MapCanvas.cpp  MapCanvas.h  NotesWidget.cpp  NotesWidget.h  PlannerWidget.cpp  PlannerWidget.h  ScenarioBrowserWidget.cpp  ScenarioBrowserWidget.h  SummaryStripWidget.cpp  SummaryStripWidget.h  TimelineWidget.cpp  TimelineWidget.h  TrackTableWidget.cpp  TrackTableWidget.h  ValidationPanelWidget.cpp  ValidationPanelWidget.h
tests/: mission_project_checklist.md  notes.md
